feat: complete implementation of event-related processing(wip)
