# backend/api/types_gen.go
@@ -30,7 +30,6 @@ type EventBase struct {
 	Attendees    []string           `json:"attendees"`
 	Date         openapi_types.Date `json:"date"`
 	Description  string             `json:"description"`
-	EventId      openapi_types.UUID `json:"event_id"`
 	IsMeAttendee bool               `json:"is_me_attendee"`
 	IsOpen       bool               `json:"is_open"`
 	Title        string             `json:"title"`
@@ -42,19 +41,6 @@ type EventSummary struct {
 	Date         openapi_types.Date `json:"date"`
 	Description  string             `json:"description"`
 	EventId      openapi_types.UUID `json:"event_id"`
-	IsMeAttendee bool               `json:"is_me_attendee"`
-	IsOpen       bool               `json:"is_open"`
-	Title        string             `json:"title"`
-}
-
-// EventUpdate defines model for EventUpdate.
-type EventUpdate struct {
-	Admins       []string           `json:"admins"`
-	Attendees    []string           `json:"attendees"`
-	Date         openapi_types.Date `json:"date"`
-	Description  string             `json:"description"`
-	EventId      openapi_types.UUID `json:"event_id"`
-	IsDeleted    bool               `json:"is_deleted"`
 	IsMeAttendee bool               `json:"is_me_attendee"`
 	IsOpen       bool               `json:"is_open"`
 	Title        string             `json:"title"`
@@ -98,7 +84,7 @@ type PostLotteryParams struct {
 type PostEventsJSONRequestBody = EventBase
 
 // PatchEventJSONRequestBody defines body for PatchEvent for application/json ContentType.
-type PatchEventJSONRequestBody = EventUpdate
+type PatchEventJSONRequestBody = EventBase
 
 // PostLotteriesJSONRequestBody defines body for PostLotteries for application/json ContentType.
 type PostLotteriesJSONRequestBody PostLotteriesJSONBody
